# spotify_pipeline

./: RUN_PIPELINE.md
spotify_pipeline/: .dockerignore  COMPLETE_GUIDE.md  DOCKER_QUICKREF.md  Dockerfile.dagster  Makefile  README.md  api.py  docker-compose.yml  docker-stop.sh  predict_from_csv.py  pyproject.toml  start.sh  start_api.sh
spotify_pipeline/docker/: Dockerfile.api
spotify_pipeline/docs/: API_README.md  DOCKER_GUIDE.md  FILE_LOCATIONS.md  QUICKSTART.md
spotify_pipeline/scripts/: docker-logs.sh  docker-start.sh  docker-test.sh  setup.sh  test_api_curl.sh
spotify_pipeline/src/spotify_pipeline/: definitions.py  sensors.py
spotify_pipeline/src/spotify_pipeline/assets/: __init__.py  data_assets.py  model_assets.py  resources.py
spotify_pipeline/src/spotify_pipeline/defs/: __init__.py  data_assets.py  model_assets.py  resources.py
spotify_pipeline/tests/: test_api.py
